force-app/main/default/objects/Amazon__c/Amazon__c.object-meta.xml
<CustomObject>
    <label>Amazon</label>
    <nameField>
        <displayFormat>AMID-{0000}</displayFormat>
        <label>Amazon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amazon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>