force-app/main/default/objects/Amazon__c/fields/image_url__c.field-meta.xml
<CustomField>
    <fullName>image_url__c</fullName>
    <label>image url</label>
    <type>Url</type>
</CustomField>