force-app/main/default/objects/Amazon__c/fields/KISHORNUBER__c.field-meta.xml
<CustomField>
    <fullName>KISHORNUBER__c</fullName>
    <label>KISHORNUBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>