force-app/main/default/objects/Amazon__c/fields/Product_detail__c.field-meta.xml
<CustomField>
    <fullName>Product_detail__c</fullName>
    <label>Product detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>