force-app/main/default/objects/Amazon__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home and Kitchen</fullName>
            </value>
            <value>
                <fullName>Beauty</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Motorbyke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>