force-app/main/default/objects/Amazon__c/fields/Quantites__c.field-meta.xml
<CustomField>
    <fullName>Quantites__c</fullName>
    <label>Quantites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>