force-app/main/default/objects/Amazon__c/fields/Total_price__c.field-meta.xml
<CustomField>
    <fullName>Total_price__c</fullName>
    <formula>Quantites__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>